--- a/css/style.css
+++ b/css/style.css
@@ -202,6 +202,13 @@ ul li a {
         flex-direction: column-reverse;
     }
 
+    .image img {
+        width: 140px;
+    }
+
+    .text h2 {
+        margin: 5px;
+    }
 
     .text {
         text-align: center;
